--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <!-- Mirrored from beratvarli.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 23 Mar 2021 16:24:49 GMT -->
 <head>
-    <title> ofckinq | Sosyal Medya Uzmanı</title>
+    <title> Swich 4!k ;D| Sosyal Medya Uzmanı</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -165,7 +165,7 @@ he1{
     <div class="homepage-banner" id="intro">
         <div class="jumbotron">
             <div class="homepage-banner-info">
-                <h1 class="rainbow"> ofckinq </h1>
+                <h1 class="rainbow"> Swich </h1>
 				   <h1 class="rainbow">Social Media Consultant </h1>
 				  
                 <div class="basliklar">
@@ -284,9 +284,9 @@ he1{
             <div class="row">
                 <div class="col-md-8">
                     <p class="subtitle">Hakkımda</p>
-                    <p class="title">Selam, Ben <font color="red"> ofckinq</font></p>
+                    <p class="title">Selam, Ben <font color="red"> Swich</font></p>
                     <p class="description">18 Yaşındayım, Yaklaşık Mesleğimle ilgili bir eğitim almadan sektörde kendimi alaylı olarak geliştirdim. Bilişim sektörüne girdiğim 2019 yılından bu yana birçok kişisel ve kurumsal web projesini tamamladım. İş hayatımda son derece özverili ve disiplinli çalışan biriyim. Özenli çalıştığım sürece tüm işlerimin başarıyla sonuçlanacağını biliyorum. Bu bağlamda siz değerli müşterilerime serbest/freelance web tasarım, PHP web programlama, HTML5-CSS3 ön yüz/front end kodlama ve Wordpress tema kurulumu alanlarında; özgün, amaca uygun ve en güncel web tasarım trendlerini göz önünde bulundurarak, "Kaliteli iş çıkarmak benim prensibim" ilkesiyle Front End'ini kodladığım tüm web site ve uygulamaların "cross browser" ve "fully responsive" olmasına özen gösteriyorum. Back End'ini kodladığım tüm uygulamaların ise hızlı ve basit yönetilebilir olmasını sağlamaktayım.</p>
-                    <button type="button" class="btn btn-primary btn-md">Instagram @serhatemr_</button>
+                    <button type="button" class="btn btn-primary btn-md">Instagram @realswich</button>
                 </div>
                 <div class="col-md-4 my-auto">
                     <img src="assets/img/profile.gif" class="img-fluid author-img" alt="#">
@@ -525,7 +525,7 @@ he1{
             <div class="row">
                 <div class="col-md-12">
                     <div class="copyright">
-                        <p class="copyright-text">Copyright &copy; <font color="orange"> Mr ofckinq Telif Hakkina Sahiptir </font> INC.|2021</p>
+                        <p class="copyright-text">Copyright &copy; <font color="orange"> Mr Swich Telif Hakkina Sahiptir </font> INC.|2021</p>
                     </div>
                 </div>
             </div>
